--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Blog
+bio:                'If you like coding, creating and candies, I think we''ll get along!'
+description:        "A blog about tech-stuff and candies."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             en_US
-url:                https://taylantatli.github.io/Moon
+locale:             en_IN
+url:                https://rutvi1998.github.io
 
 # Jekyll
 permalink:          /:title/
@@ -38,19 +38,20 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            username
-facebook:           username
-github-url:         username
+twitter:            PadhyRutvi
+facebook:           rutvi.padhy
+github-url:         rutvi1998
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           rutvi-padhy-981963170
+quora:              Rutvi-Padhy
 #xing:              username
-instagram:          username
-#lastfm:            username
+#instagram:         username
+#lastfm:            usernamerutvi-padhy-981963170
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:             username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
