--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              Blog
-bio:                'If you like coding, creating and candies, I think we''ll get along!'
+title:              Rutvi Padhy
+bio:                'Hello, reader. If you like coding, creating and candies, I think we''ll get along!'
 description:        "A blog about tech-stuff and candies."
 reading_time:       true
 words_per_minute:   200
