--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Hello, reader. I like coding and creating. And if you like 
 description:        "A blog about tech-stuff and candies."
 reading_time:       true
 words_per_minute:   200
-#logo:              'assets/img/logo.png'
+logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_IN
