--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Rutvi Padhy
-bio:                'Hello, reader. I like coding and creating. And if you like candies, I''m sure we''ll get along!'
+bio:                'Hello, reader. I like coding and creating. And if you like cookies, I''m sure we''ll get along!'
 description:        "A blog about tech-stuff and candies."
 reading_time:       true
 words_per_minute:   200
