--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Rutvi Padhy
-bio:                'Hello, reader. I like coding and creating. And if you like candies, I''m sure we''ll get along!'
-description:        "A blog about tech-stuff and candies."
+bio:                'Hello, reader. I like coding and creating. And if you take an interest in either or both, I''m sure we''d get along!'
+description:        "A blog about tech-stuff and my obsession with them."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
